--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <main class="main-content">
         <header class="header-banner">
-            <h1 class="main-title">Pana Secreto</h1>
+            <h1 class="main-title">Amigo Secreto</h1>
             <img src="assets/amigo-secreto.png" alt="Imagem representativa de amigo secreto">
         </header>
         
         <section class="input-section">
-            <h2 class="section-title">Digite o nome dos seus panas</h2>
+            <h2 class="section-title">Digite o nome dos seus amigos</h2>
             <div class="input-wrapper">
                 <input type="text" id="amigo" class="input-name" placeholder="Digite um nome">
-                <button class="button-add" onclick="adicionarPana()">Adicionar</button>
+                <button class="button-add" onclick="adicionarAmigo()">Adicionar</button>
             </div>
            
             <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
@@ -30,7 +30,7 @@
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear Pana secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícone para sortear">
-                    Sortear um pana
+                    Sortear amigo secreto
                 </button>
             </div>
         </section>
